fix layout issues, add paragraph

--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,14 @@ body {
 
 /*HEAD*/
 .header {
-  position: fixed;
+
   margin: 0 auto;
-  background-image: url(https://cdn.pixabay.com/photo/2017/08/22/23/13/umbrail-2670920_960_720.jpg);
+  background-image: url("images/headerTrailCropped.jpg");
   background-size: 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100%;
-  max-height: 500px;
+  height: 500px;
   min-height: 100px;
   overflow: hidden;
 }
@@ -26,7 +25,7 @@ body {
   margin-top: 2.5%;
   height: 20%;
   width: 100%;
-  position: relative;
+  position: absolute;
   vertical-align: top;
 }
 
@@ -70,7 +69,7 @@ body {
   position: relative;
   vertical-align: middle;
   text-align: center;
-  top: 20%;
+  top: 40%;
   background-color: black;
   opacity: 0.3;
 }
@@ -82,11 +81,19 @@ body {
 /**MAIN**/
 
 .main {
-  position: absolute;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-  background-color: white;
+  margin-bottom: 25%;
   max-height: 500px;
-  min-height: 100px;
-  bottom: auto;
-  margin-top: 50%;
+  min-height: 50px;
+  background-color: white;
+}
+
+.preach {
+  margin: 2.5% 5% 0% 5%;
+  width: 33%;
+  float: left;
+
+
 }
